# nanokey

./: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  package.json  tsconfig.json
.vim-tslint/: _tslint_nanokey.service.ts
src/: .app.module.ts.swp  .main.ts.swp  app.module.ts  main.rs  main.ts
src/nanokey/: nanokey.controller.spec.ts  nanokey.controller.ts  nanokey.interface.ts  nanokey.module.ts  nanokey.service.spec.ts  nanokey.service.ts
test/: nanokey.e2e-spec.ts
