[package]
name = "platinum"
version = "0.1.0"
authors = ["Jarred Parr <jparr721@gmail.com>"]
edition = "2018"
description = "Distributed key-value store in rust"

[dependencies]
chrono = "0.4"
dotenv = "0.14.1"
log = "0.4"
hyper = "0.12"
pretty_env_logger = "0.3"
rocksdb = "0.12.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
time = "0.1.42"
tokio = "0.1.22"

[dependencies.rocksdb]
default - features = false
features = ["lz4"]
